# checking-tool

./: .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.tmp  .prettierrc.js  README.md  build-macos.sh  gen.go  icon.icns  index.html  index.js  main.go  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/: instructions.md
.github/workflows/: github-actions-release.yml
electron/: main.ts  preload.ts  type.ts
electron/get/: alt.ts  headline.ts  link.ts  title.ts
lib/: Alt.js  Headline.js  Link.js  Request.js  Title.js  Util.js
public/: index.html
renderer/: App.vue  main.ts
renderer/components/: Form.vue  Header.vue  Hero.vue  Image.vue  Modal.vue  Navbar.vue
renderer/debug/: check_page.ts
renderer/messages/: en.ts  index.ts  ja.ts
renderer/page/: Alt.vue  Dashboard.vue  Headline.vue  Link.vue  Title.vue
renderer/router/: Alt.ts  Dashboard.ts  Headline.ts  Link.ts  Title.ts  index.ts
renderer/store/: alt.ts  app.ts  form.ts  headline.ts  link.ts  title.ts
renderer/use/: alt.ts  app.ts  form.ts  headline.ts  link.ts  title.ts
renderer/util/: setViewportProperty.ts  substr.ts
src/: App.tsx  App.vue  fontawesome.d.ts  main.ts  main.tsx  preload.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  parse.rs
src-tauri/src/commands/: alt.rs  crawl.rs  headline.rs  link.rs  title.rs
src/Atoms/: BulkUrl.ts  BulkUrlResult.ts  DarkMode.ts  Language.ts  Pass.ts  PassResult.ts  Url.ts  UrlResult.ts  User.ts  UserResult.ts
src/Components/: AltRow.tsx  CommonForm.tsx  CommonFormBulk.tsx  Image.tsx  LanguageSwitch.tsx  LinkRow.tsx  Navigation.tsx  PageHeader.tsx  TitleRow.tsx  VerticalSpace.tsx  index.tsx
src/Pages/: Alt.tsx  Crawl.tsx  Dashboard.tsx  Headline.tsx  Link.tsx  PageList.tsx  Title.tsx
src/component/: Form.vue  Image.vue  Modal.vue  Navbar.vue
src/hooks/: useDatabase.ts
(+26 files in other folders)
