[package]
name = "app"
version = "3.3.0"
description = "Checker support tools"
authors = ["SUSH"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.68.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "devtools"] }
reqwest = { version = "0.11.17", features = ["blocking"] }
scraper = "0.16.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
