[package]
name = "app"
version = "4.0.1"
description = "Checker support tools"
authors = ["SUSH"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
regex = "1"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
futures = "0.3"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
